more changes to index.html.erb

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -55,64 +55,68 @@
     </span>
   </div>
 
-  <div class="figure row">
+  <div class="figure row" style="margin-bottom: 30px;">
     <img class="col-xs-11" src="/assets/figures/3_accident_ratioplot.png"/>
     <a class="col-xs-1" href="/assets/figures/3_accident_ratioplot.png">See in full size</a>
 
     <span class="figure-text col-xs-12"><b>Figure 3. Annual accidents vs. traffic comparison.</b>
-      On the y-axis you can see the ratio between the accidents and traffic volumes. The ratio itself doesn't tell about
-      the number of individuals involved in the accident.
+      On the y-axis you can see the ratio between the accidents and traffic volumes. The higher the ratio, the more accidents
+      have occured on average for traffic volume. The ratio itself doesn't tell about the number of individuals involved in the accident.
     </span>
   </div>
 
 
-  <p style="margin-top: 30px;">The following images visualize the above results on a map.</p>
+  <p>The following images visualize the above results on a map.</p>
 
   <div class="figure row">
     <img class="col-xs-10" src="/assets/figures/4_measurement_points.png"/>
     <a class="col-xs-2" href="/assets/figures/4_measurement_points.png">See in full size</a>
 
-    <b class="figure-text col-xs-12">Figure 4. Measurement points of traffic data on a map</b>
+    <span class="figure-text col-xs-12"><b>Figure 4. Measurement points of traffic data on Helsinki map.</b></span>
   </div>
 
   <div class="figure row">
     <img class="col-xs-10" src="/assets/figures/5_measurement_points_with_accidents_per_traffic_sum.png"/>
     <a class="col-xs-2" href="/assets/figures/5_measurement_points_with_accidents_per_traffic_sum.png">See in full size</a>
 
-    <b class="figure-text col-xs-12">Figure 5. Accidents vs. traffic comparison. Larger circle around measurement point means higher accident ratio.</b>
+    <span class="figure-text col-xs-12"><b>Figure 5. Accidents vs. traffic comparison.</b>
+      Larger circle around a measurement point means higher average annual accident ratio.
+    </span>
   </div>
 
   <div class="figure row">
-    <img class="col-xs-10" src="/assets/figures/6_measurement_points_with_accidents_per_traffic_sum_central.png"/>
+    <img class="col-xs-10 figure-small" src="/assets/figures/6_measurement_points_with_accidents_per_traffic_sum_central.png"/>
     <a class="col-xs-2" href="/assets/figures/6_measurement_points_with_accidents_per_traffic_sum_central.png">See in full size</a>
 
-    <b class="figure-text col-xs-12">Figure 6. Accidents vs. traffic comparison in Helsinki central.</b>
+    <span class="figure-text col-xs-12"><b>Figure 6. Accidents vs. traffic comparison in Helsinki central.</b>
+    </span>
+
   </div>
 
   <div class="figure row">
-    <img class="col-xs-10" src="/assets/figures/8_measurement_points_with_accidents_per_traffic_sum_north_west.png"/>
+    <img class="col-xs-10 figure-small" src="/assets/figures/8_measurement_points_with_accidents_per_traffic_sum_north_west.png"/>
     <a class="col-xs-2" href="/assets/figures/8_measurement_points_with_accidents_per_traffic_sum_north_west.png">See in full size</a>
 
-    <b class="figure-text col-xs-12">Figure 7. Accidents vs. traffic comparison in western part of Helsinki.</b>
+    <span class="figure-text col-xs-12"><b>Figure 7. Accidents vs. traffic comparison in western part of Helsinki.</b>
+    </span>
   </div>
 
   <div class="figure row">
-    <img class="col-xs-10" src="/assets/figures/7_measurement_points_with_accidents_per_traffic_sum_north_east.png"/>
+    <img class="col-xs-10 figure-small" src="/assets/figures/7_measurement_points_with_accidents_per_traffic_sum_north_east.png"/>
     <a class="col-xs-2" href="/assets/figures/7_measurement_points_with_accidents_per_traffic_sum_north_east.png">See in full size</a>
 
-    <b class="figure-text col-xs-12">Figure 8. Accidents vs. traffic comparison in eastern part of Helsinki.</b>
+    <span class="figure-text col-xs-12"><b>Figure 8. Accidents vs. traffic comparison in eastern part of Helsinki.</b>
+      Here the road of which name is unclearly visible is Itäväylä.
+    </span>
   </div>
 
-  <b>Seuraavaksi:
-    - Loput kuvatekstit<br>
-    - Conclusions valmiiksi
-    - Kuvista valkoiset reunat pois?
-    - Esitys kuntoon
-    - Esityksen harjoittelu
-    - Projektin palautus
-    -- Loput koodit master haaraan vaikka ei käytettäisi
-    -- process logi kuntoon ym.
-  </b>
+  <b>Seuraavaksi:</b><br>
+    - Conclusions valmiiksi<br>
+    - Esitys kuntoon<br>
+    - Esityksen harjoittelu<br>
+    - Projektin palautus<br>
+    --- Loput koodit master haaraan vaikka ei käytettäisi<br>
+    --- process logi kuntoon ym.
 
   <h3>Conclusions</h3>
 
@@ -120,9 +124,6 @@
 
     Based on the above figures, (to be continued...)
 
-  <p>As it's for example easy to assume, <b>Kehä I</b> and <b>Lahdenväylä</b> are both used quite a lot, but what isn't necessarily obvious is that
-    accidents happen in those roads way more often than in <b>Kehä III</b>. At the same time <b>Itäväylä</b> is still more accident prone than any of these.
-  </p>
 
   <h4 id="team">Team</h4>
   <ul>
