--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,7 +8,7 @@
   <h3>Introduction</h3>
 
   <p class="text-field">
-    We have done research based on the open datasets on ‘Road traffic accidents’ and ‘Traffic Volumes’ in the Helsinki city area.
+    We have done research based on the open datasets on <a href="https://www.avoindata.fi/data/fi/dataset/tieliikenneonnettomuudet">Road traffic accidents</a> and <a href="https://www.avoindata.fi/data/fi/dataset/liikennemaarat-helsingissa">Traffic Volumes</a> in the Helsinki city area.
     Our initial plan was to find correlations between the traffic volumes and the road accidents on different streets in Helsinki, and we also wanted to see if there are any especially dangerous roads out there.
     <br>
     Following when we talk about annual ’traffic volume’ on a certain road, we mean the amount motor vehicles that annually pass that certain measurement point.
@@ -110,20 +110,13 @@
     </span>
   </div>
 
-  <b>Seuraavaksi:</b><br>
-    - Conclusions valmiiksi<br>
-    - Esitys kuntoon<br>
-    - Esityksen harjoittelu<br>
-    - Projektin palautus<br>
-    --- Loput koodit master haaraan vaikka ei käytettäisi<br>
-    --- process logi kuntoon ym.
 
   <h3>Conclusions</h3>
 
   <p class="text-field">
-
-    Based on the above figures, (to be continued...)
-
+    Our analysis shows that there are some potentially problematic roads in Helsinki; especially Knutersintie has a very high accident-traffic volume ratio compared to other roads.
+    It was a surprise that some major roads like Kehä 1, Hämeenlinnanväylä and Lahdenväylä have relative low accident-traffic volume ratios.
+  </p>
 
   <h4 id="team">Team</h4>
   <ul>
