--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -29,8 +29,8 @@
     <ul>
       <li>The first figure shows the annual traffic volume in certain streets of Helsinki.</li>
       <li>The second figure shows the amounts of traffic accidents on the same streets.</li>
-      <li>The third figure displays the accident - traffic volume ratios.</li>
-      <li>The remaining figures (4-8) are maps that display the accident - traffic volume ratios on some selected streets.</li>
+      <li>The third figure displays the accident-traffic volume ratios.</li>
+      <li>The remaining figures (4-8) are maps that display the accident-traffic volume ratios on some selected streets.</li>
     </ul>
   </p>
 
@@ -58,7 +58,7 @@
     <img class="col-xs-11" src="/assets/figures/3_accident_ratioplot.png"/>
     <a class="col-xs-1" href="/assets/figures/3_accident_ratioplot.png">See in full size</a>
 
-    <span class="figure-text col-xs-12"><b>Figure 3. Annual accidents vs. traffic volumes comparison.</b>
+    <span class="figure-text col-xs-12"><b>Figure 3. Annual accidents-traffic volumes comparison.</b>
       The y-axis shows the ratio between the accidents and traffic volumes. The higher the ratio, the more accidents
       have occured on average for traffic volume. The ratio itself doesn't tell about the number of individuals involved in the accident.
     </span>
@@ -78,7 +78,7 @@
     <img class="col-xs-10" src="/assets/figures/5_measurement_points_with_accidents_per_traffic_sum.png"/>
     <a class="col-xs-2" href="/assets/figures/5_measurement_points_with_accidents_per_traffic_sum.png">See in full size</a>
 
-    <span class="figure-text col-xs-12"><b>Figure 5. Accident - traffic volume ratios.</b>
+    <span class="figure-text col-xs-12"><b>Figure 5. Accident-traffic volume ratios.</b>
       Larger circle around a measurement point means higher average annual accident ratio.
     </span>
   </div>
@@ -87,7 +87,7 @@
     <img class="col-xs-10 figure-small" src="/assets/figures/6_measurement_points_with_accidents_per_traffic_sum_central.png"/>
     <a class="col-xs-2" href="/assets/figures/6_measurement_points_with_accidents_per_traffic_sum_central.png">See in full size</a>
 
-    <span class="figure-text col-xs-12"><b>Figure 6. Accident - traffic volume ratios in Helsinki city center.</b>
+    <span class="figure-text col-xs-12"><b>Figure 6. Accident-traffic volume ratios in Helsinki city center.</b>
     </span>
 
   </div>
@@ -96,7 +96,7 @@
     <img class="col-xs-10 figure-small" src="/assets/figures/8_measurement_points_with_accidents_per_traffic_sum_north_west.png"/>
     <a class="col-xs-2" href="/assets/figures/8_measurement_points_with_accidents_per_traffic_sum_north_west.png">See in full size</a>
 
-    <span class="figure-text col-xs-12"><b>Figure 7. Accident - traffic volume ratios in the western part of Helsinki.</b>
+    <span class="figure-text col-xs-12"><b>Figure 7. Acciden-ttraffic volume ratios in the western part of Helsinki.</b>
     </span>
   </div>
 
@@ -104,7 +104,7 @@
     <img class="col-xs-10 figure-small" src="/assets/figures/7_measurement_points_with_accidents_per_traffic_sum_north_east.png"/>
     <a class="col-xs-2" href="/assets/figures/7_measurement_points_with_accidents_per_traffic_sum_north_east.png">See in full size</a>
 
-    <span class="figure-text col-xs-12"><b>Figure 8. Accident - traffic volume ratios in the eastern part of Helsinki.</b>
+    <span class="figure-text col-xs-12"><b>Figure 8. Accident-traffic volume ratios in the eastern part of Helsinki.</b>
       The largest yellow circle represents the ratio on Itäväylä.
     </span>
   </div>
