--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -2,9 +2,11 @@ body {
 }
 
 #title {
+    font-size: 45px;
     font-style: italic;
     text-align: center;
-    margin-bottom: 20px;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 
 h3 {
