--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -34,7 +34,7 @@
       <li>The first figure shows the annual traffic volume in certain streets of Helsinki.</li>
       <li>The second figure shows the amounts of traffic accidents on the same streets.</li>
       <li>The third figure displays the accident-traffic volume ratios.</li>
-      <li>The remaining figures (4-8) are maps that display the accident-traffic volume ratios on some selected streets.</li>
+      <li>The remaining figures (4-8) are maps that display the accident-traffic volume ratios on certain selected streets.</li>
     </ul>
   </p>
 
@@ -64,7 +64,7 @@
 
     <span class="figure-text col-xs-12"><b>Figure 3. Annual accidents-traffic volumes comparison.</b>
       The y-axis shows the ratio between the accidents and traffic volumes. The higher the ratio, the more accidents
-      have occured on average for traffic volume. The ratio itself doesn't tell about the number of individuals involved in the accident.
+      have occured on average for traffic volume. The ratio itself doesn't tell about the number of individuals involved in the accidents.
     </span>
   </div>
 
@@ -122,7 +122,7 @@
     <br>
     The road traffic accidents dataset contained very detailed data on the accidents, and could be utilized for much deeper analyses by itself.
     Alone it lacked perspective, and for our use it required some estimations on the traffic volumes.
-    Our data pinpoints the roads which could perhaps require more attention in the future road planning.
+    Our data pinpoints the roads that could perhaps require more attention in the future road planning.
   </p>
 
   <h4 id="team">Team</h4>
