fixed typo with Figure 7 description

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -100,7 +100,7 @@
     <img class="col-xs-10 figure-small" src="/assets/figures/8_measurement_points_with_accidents_per_traffic_sum_north_west.png"/>
     <a class="col-xs-2" href="/assets/figures/8_measurement_points_with_accidents_per_traffic_sum_north_west.png">See in full size</a>
 
-    <span class="figure-text col-xs-12"><b>Figure 7. Acciden-ttraffic volume ratios in the western part of Helsinki.</b>
+    <span class="figure-text col-xs-12"><b>Figure 7. Accident-traffic volume ratios in the western part of Helsinki.</b>
     </span>
   </div>
 
