--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -88,16 +88,15 @@
   </div>
 
   <div class="figure row">
-    <img class="col-xs-10 figure-small" src="/assets/figures/6_measurement_points_with_accidents_per_traffic_sum_central.png"/>
+    <img class="col-xs-10 figure-x-small" src="/assets/figures/6_measurement_points_with_accidents_per_traffic_sum_central.png"/>
     <a class="col-xs-2" href="/assets/figures/6_measurement_points_with_accidents_per_traffic_sum_central.png">See in full size</a>
 
     <span class="figure-text col-xs-12"><b>Figure 6. Accident-traffic volume ratios in Helsinki city center.</b>
     </span>
-
   </div>
 
   <div class="figure row">
-    <img class="col-xs-10 figure-small" src="/assets/figures/8_measurement_points_with_accidents_per_traffic_sum_north_west.png"/>
+    <img class="col-xs-10 figure-xx-small" src="/assets/figures/8_measurement_points_with_accidents_per_traffic_sum_north_west.png"/>
     <a class="col-xs-2" href="/assets/figures/8_measurement_points_with_accidents_per_traffic_sum_north_west.png">See in full size</a>
 
     <span class="figure-text col-xs-12"><b>Figure 7. Accident-traffic volume ratios in the western part of Helsinki.</b>
@@ -109,7 +108,7 @@
     <a class="col-xs-2" href="/assets/figures/7_measurement_points_with_accidents_per_traffic_sum_north_east.png">See in full size</a>
 
     <span class="figure-text col-xs-12"><b>Figure 8. Accident-traffic volume ratios in the eastern part of Helsinki.</b>
-      The largest yellow circle represents the ratio on Itäväylä.
+      The second largest yellow circle represents the ratio on Itäväylä.
     </span>
   </div>
 
